# trivial

data/: africa_areas.json  africa_capitals.json  africa_populations.json  antarctica_areas.json  asia_areas.json  asia_capitals.json  asia_populations.json  capitals.json  capitals.yaml  capitals2.json  continent_to_country.json  continents.json  country_area.json  country_capital.json  country_continent.json  country_population.json  europe_areas.json  europe_capitals.json  europe_populations.json  north_america_areas.json  north_america_capitals.json  north_america_populations.json  oceania_areas.json  oceania_capitals.json  oceania_populations.json  south_america_areas.json  south_america_capitals.json  south_america_populations.json  world_population.csv  wrangle.py
data/questions/: africa_areas.yaml  africa_capitals.yaml  africa_populations.yaml  antarctica_areas.yaml  antarctica_populations.yaml  asia_areas.yaml  asia_capitals.yaml  asia_populations.yaml  europe_areas.yaml  europe_capitals.yaml  europe_populations.yaml  north_america_areas.yaml  north_america_capitals.yaml  north_america_populations.yaml  oceania_areas.yaml  oceania_capitals.yaml  oceania_populations.yaml  south_america_areas.yaml  south_america_capitals.yaml  south_america_populations.yaml  vocabulary.yaml  world_areas.yaml  world_capitas.yaml  world_geography.yaml  world_populations.yaml
rust/: Cargo.toml
rust/src/: db.rs  functionality.rs  lib.rs  main.rs
sql/: data.db  setup.sql
