[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
clearscreen = "2.0.1"
colored = "2.1.0"
inquire = "0.6.2"
num-format = "0.4.4"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "sqlite","chrono", "macros" ] }
chrono = "0.4.38"

[[bin]]
name = "trivial"
path = "src/bin/main.rs"

[[bin]]
name = "sqlx_test"
path = "src/bin/sqlx_test.rs"
